manifests/prd/external-dns/Service-external-dns-mikrotik.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: external-dns
    app.kubernetes.io/name: external-dns
  name: external-dns-mikrotik
  namespace: external-dns
spec:
  ports:
    - name: http
      port: 7979
      protocol: TCP
      targetPort: http
    - name: http-webhook
      port: 8080
      protocol: TCP
      targetPort: http-webhook
  selector:
    app.kubernetes.io/instance: external-dns
    app.kubernetes.io/name: external-dns
  type: ClusterIP
